edit csv hourly

--- a/.github/workflows/update-interns.yml
+++ b/.github/workflows/update-interns.yml
@@ -2,7 +2,7 @@ name: Update Internships CSV
 
 on:
   schedule:
-    - cron: '0 0 * * *'   # every day at midnight
+    - cron: '0 * * * *'   # every hour
   workflow_dispatch: {}
 
 permissions:
