--- a/.github/workflows/update-interns.yml
+++ b/.github/workflows/update-interns.yml
@@ -33,9 +33,9 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add internships_us_canada.csv index.html || true
+          git add internships_us_canada.csv || true
           if ! git diff --staged --quiet; then
-            git commit -m "Hourly update: internships CSV and HTML page"
+            git commit -m "Hourly update: internships CSV"
             git push https://x-access-token:${GH_PAT}@github.com/vats98754/job-fetcher.git HEAD:main
           else
             echo "No changes to commit"
